@@ -1,5 +1,12 @@
 2008-09-04  Bastien Nocera  <hadess@hadess.net>
 
+	* libjuicer/sj-metadata-musicbrainz.c (mb_list_albums):
+	* libjuicer/sj-metadata-musicbrainz3.c (make_album_from_release):
+	* libjuicer/sj-metadata.c (sj_metadata_helper_scan_date):
+	* libjuicer/sj-metadata.h: Move the date parsing to a common place
+
+2008-09-04  Bastien Nocera  <hadess@hadess.net>
+
 	* libjuicer/sj-metadata-musicbrainz.c (mb_list_albums),
 	(sj_metadata_musicbrainz_init), (sj_metadata_musicbrainz_finalize):
 	* libjuicer/sj-metadata-musicbrainz3.c (make_album_from_release),
